--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ilokesto/utilinent": "^0.0.21",
     "framer-motion": "^12.23.22",
+    "lucide": "^0.544.0",
     "neato": "^0.0.17",
     "next": "15.5.4",
     "next-intl": "^4.3.9",
