--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@ilokesto/utilinent": "^0.0.21",
     "framer-motion": "^12.23.22",
     "lucide": "^0.544.0",
-    "neato": "file:../ilokesto/neato",
+    "neato": "0.0.20",
     "next": "15.5.4",
     "next-intl": "^4.3.9",
     "react": "19.2.0",
