--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["carokann", "CRES", "iloˈkɛsto", "Textline"]
+  "cSpell.words": ["carokann", "CRES", "iloˈkɛsto", "pathcodegen", "Textline"]
 }
