--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "node scripts/update-libraries-from-npm.mjs    && next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
